# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  Makefile  README.md  compile_commands.json  hellobob.py
.devcontainer/: .bashrc  devcontainer.json  post-create.sh
docs/: project-structure-and-cmake-review.md
include/calculator/: calculate.h
include/fibonacci/: fibonacci.h
include/treasure/: treasure.h
lib/: CMakeLists.txt  Makefile  fibonacci.cpp  treasure.cpp
src/: CMakeLists.txt  Makefile  calculate.cpp  calculator.cpp  fibocli.cpp  hellobob.cpp  helloworld  problem5.cpp
test/: CMakeLists.txt  Makefile  calculator_tests.cpp  fibonacci_tests.cpp  treasure_tests.cpp
