## Library infra placeholder

# This directory is kept so you can add libraries later.
# Define libraries here in the future, for example:
#
# set(LIB_NAME mylib)
# add_library(${LIB_NAME} STATIC
#   src1.cpp
#   src2.cpp
# )
# target_include_directories(${LIB_NAME}
#   PUBLIC ${PROJECT_SOURCE_DIR}/include
# )
# target_compile_features(${LIB_NAME} PUBLIC cxx_std_17)
# if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
#   target_compile_options(${LIB_NAME} PRIVATE -Wall -Wextra -pedantic)
#   target_compile_options(${LIB_NAME} PRIVATE -Wno-vla -Wno-unused-parameter)
# endif()

